chore: 🤖 클라이언트의 snake_case에 대해 대처할 수 있도록 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 # jpa
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=validate
+# json
+spring.jackson.property-naming-strategy=SNAKE_CASE
