--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     // docker compose
-    developmentOnly "org.springframework.boot:spring-boot-docker-compose"
+    if (!project.hasProperty('docker')) {
+        runtimeOnly 'org.springframework.boot:spring-boot-docker-compose'
+    }
 
     // MySQL
     runtimeOnly 'com.mysql:mysql-connector-j'
