--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
 
   app:
-    build: .
+    image: azul/zulu-openjdk:17.0.9
     ports:
       - 8080:8080
     depends_on:
@@ -12,6 +12,10 @@ services:
       - docker
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+    volumes:
+      - .:/app
+    working_dir: /app
+    command: sh -c "chmod +x ./gradlew && ./gradlew bootRun -Pdocker"
 
   mysql:
     image: mysql:8.4.0
