--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=validate
 # json
 spring.jackson.property-naming-strategy=SNAKE_CASE
+# db
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:ddl.sql
