chore: 🤖 테스트 시 도커 컴포즈 스킵되지 않도록 구성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jackson.property-naming-strategy=SNAKE_CASE
 # db
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:ddl.sql
+# test
+spring.docker.compose.skip.in-tests=false
