--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -7,3 +7,4 @@ default-character-set = utf8mb4
 [mysqld]
 character-set-server = utf8mb4
 collation-server = utf8mb4_general_ci
+cte_max_recursion_depth=100000
